# integral

./: .gitignore  Dockerfile  backtest_output.txt  docker-compose.yml
bart/: Cargo.toml
composer/: CMakeLists.txt
composer/include/: diff_engine.hpp  safety_check.hpp  types.hpp
composer/src/: diff_engine.cpp  main.cpp  safety_check.cpp
composer/tests/: test_diff_engine.cpp  test_safety_check.cpp  test_types.cpp
db/: README.md  schema.sql  seed_data.sql
infra/: docker-compose.yml
infra/quantrocket/: docker-compose.yml
mind/: config.py  create_universe.py  export_history.py  ingest_daily.py  nautilus_mock.py  requirements.txt  run_backtest.py  run_paper_alpaca.py  run_strategy.py  strategy.py
mind/data/: alpha.py  lstm_alpha.py  openbb.py
mind/optimizer/: constraints.py  monte_carlo.py  objective.py  risk_model.py  solver.py
mind/portfolio/: provider.py  state.py
mind/tests/: test_alpha.py  test_market_ingest.py  test_nautilus_strategy.py  test_optimizer.py  test_portfolio.py  test_risk_constraints.py
